[gd_scene load_steps=32 format=3 uid="uid://dvieqeb8xpjbw"]

[ext_resource type="Texture2D" uid="uid://bu7saiclfqw1e" path="res://assets/Raum_vorlage_2_.png" id="1_txjdu"]
[ext_resource type="PackedScene" uid="uid://d0csjqmnu2f6" path="res://scenes/function scenes/tisch.tscn" id="2_gkwet"]
[ext_resource type="PackedScene" uid="uid://bb0wud2nxuvhn" path="res://scenes/function scenes/schrank.tscn" id="2_rdng0"]
[ext_resource type="PackedScene" uid="uid://cov2icpkpnq40" path="res://scenes/function scenes/tisch_hausiheft.tscn" id="3_fsc35"]
[ext_resource type="PackedScene" uid="uid://kw7le5116cb6" path="res://scenes/hauptszenen/player.tscn" id="4_rdcte"]
[ext_resource type="PackedScene" uid="uid://uvtoqvx1h3xh" path="res://scenes/function scenes/lehrertisch.tscn" id="5_rdcte"]
[ext_resource type="Texture2D" uid="uid://ttvc5k54vnfp" path="res://assets/buch.png" id="6_75tq4"]
[ext_resource type="Texture2D" uid="uid://cijjrgs1bauh5" path="res://assets/e_key.png" id="7_5arhk"]
[ext_resource type="Script" uid="uid://o852i7sras1v" path="res://scripts/schulbuch_prompr_r2.gd" id="7_tqhsi"]
[ext_resource type="Script" uid="uid://dp7s4u7uk8is0" path="res://scripts/seiten_input.gd" id="10_0n3xi"]
[ext_resource type="Script" uid="uid://bj0dps7eibay5" path="res://scripts/hausiheft_area.gd" id="10_jokoe"]
[ext_resource type="Texture2D" uid="uid://ch46degp7vdyo" path="res://assets/hausi heft offen.png" id="11_fsc35"]
[ext_resource type="Texture2D" uid="uid://s2tu17obohw2" path="res://assets/buchseite_richtig_1.png" id="12_wehhw"]
[ext_resource type="Texture2D" uid="uid://b1uwe0g678poj" path="res://assets/buchseite_falsch.png" id="12_xhwow"]
[ext_resource type="Script" uid="uid://3w4pajfd0p7h" path="res://scripts/schrank_area.gd" id="15_wehhw"]
[ext_resource type="Texture2D" uid="uid://c7jagwvixnehw" path="res://assets/schloss.png" id="16_xhwow"]
[ext_resource type="Texture2D" uid="uid://buu66jowdhr2w" path="res://assets/ex_notiz_1.png" id="17_8mifd"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_gkwet"]
a = Vector2(-501, -3)
b = Vector2(-501, -501)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_rdcte"]
a = Vector2(-315, -215)
b = Vector2(-500, -43)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_75tq4"]
a = Vector2(349.474, -214.737)
b = Vector2(-323.158, -212.632)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bgydp"]
a = Vector2(519, -24)
b = Vector2(307, -222)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5bm2n"]
a = Vector2(501, -500)
b = Vector2(500, -1)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_5arhk"]
a = Vector2(504, -1)
b = Vector2(-507, -1)

[sub_resource type="CircleShape2D" id="CircleShape2D_tqhsi"]
radius = 71.1758

[sub_resource type="SystemFont" id="SystemFont_fsc35"]
font_names = PackedStringArray("Arial")
font_weight = 625

[sub_resource type="LabelSettings" id="LabelSettings_jokoe"]
font = SubResource("SystemFont_fsc35")
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(4, 4)

[sub_resource type="CircleShape2D" id="CircleShape2D_fsc35"]
radius = 68.0074

[sub_resource type="LabelSettings" id="LabelSettings_fsc35"]
font_size = 43
outline_size = 9
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_xhwow"]
radius = 92.0489

[sub_resource type="LabelSettings" id="LabelSettings_wehhw"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xhwow"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="raum2" type="Node2D"]

[node name="RaumVorlage2" type="Sprite2D" parent="."]
position = Vector2(0, -251)
texture = ExtResource("1_txjdu")

[node name="Objekte" type="Node2D" parent="."]
y_sort_enabled = true

[node name="tisch4" parent="Objekte" instance=ExtResource("2_gkwet")]
position = Vector2(12, -18)

[node name="tisch3" parent="Objekte" instance=ExtResource("2_gkwet")]
position = Vector2(-193, -20)

[node name="tisch2" parent="Objekte" instance=ExtResource("2_gkwet")]
position = Vector2(87, -121)

[node name="tisch" parent="Objekte" instance=ExtResource("3_fsc35")]
position = Vector2(-100, -120)

[node name="schrank" parent="Objekte" instance=ExtResource("2_rdng0")]
position = Vector2(-251, -328)

[node name="lehrertisch" parent="Objekte" instance=ExtResource("5_rdcte")]
position = Vector2(242, -110)
scale = Vector2(0.9, 0.9)

[node name="player" parent="Objekte" instance=ExtResource("4_rdcte")]
position = Vector2(-320, -93)

[node name="barriers" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="barriers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="barriers/StaticBody2D"]
shape = SubResource("SegmentShape2D_gkwet")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="barriers/StaticBody2D"]
shape = SubResource("SegmentShape2D_rdcte")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="barriers/StaticBody2D"]
position = Vector2(-12, -15)
scale = Vector2(0.95, 0.95)
shape = SubResource("SegmentShape2D_75tq4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="barriers/StaticBody2D"]
shape = SubResource("SegmentShape2D_bgydp")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="barriers/StaticBody2D"]
shape = SubResource("SegmentShape2D_5bm2n")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="barriers/StaticBody2D"]
shape = SubResource("SegmentShape2D_5arhk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -249)
zoom = Vector2(1.15, 1.15)

[node name="Logik" type="Node2D" parent="."]

[node name="schulbuch" type="Node2D" parent="Logik"]
process_mode = 3

[node name="buch" type="Sprite2D" parent="Logik/schulbuch"]
position = Vector2(129.5, -241.5)
scale = Vector2(0.195, 0.185)
texture = ExtResource("6_75tq4")

[node name="prompt_area" type="Area2D" parent="Logik/schulbuch"]
collision_layer = 4
collision_mask = 4
script = ExtResource("7_tqhsi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Logik/schulbuch/prompt_area"]
position = Vector2(130, -245)
shape = SubResource("CircleShape2D_tqhsi")

[node name="EKey" type="Sprite2D" parent="Logik/schulbuch/prompt_area"]
position = Vector2(128, -392)
scale = Vector2(0.375, 0.375)
texture = ExtResource("7_5arhk")

[node name="seiten_input" type="Node2D" parent="Logik/schulbuch/prompt_area"]
visible = false
script = ExtResource("10_0n3xi")

[node name="LineEdit" type="LineEdit" parent="Logik/schulbuch/prompt_area/seiten_input"]
offset_left = -222.0
offset_top = -256.0
offset_right = 222.0
offset_bottom = -225.0
placeholder_text = "Seitenzahl"

[node name="Label" type="Label" parent="Logik/schulbuch/prompt_area/seiten_input"]
offset_left = -222.0
offset_top = -283.0
offset_right = 222.0
offset_bottom = -260.0
text = "Welche Seite möchtest du öffnen?:"
label_settings = SubResource("LabelSettings_jokoe")

[node name="schliessen" type="Button" parent="Logik/schulbuch/prompt_area/seiten_input"]
offset_left = -200.0
offset_top = -53.0
offset_right = 198.0
offset_bottom = -22.0
text = "Schließen"

[node name="BuchseiteFalsch" type="Sprite2D" parent="Logik/schulbuch/prompt_area"]
visible = false
position = Vector2(60, -215)
scale = Vector2(0.365455, 0.365455)
texture = ExtResource("12_xhwow")

[node name="BuchseiteRichtig1" type="Sprite2D" parent="Logik/schulbuch/prompt_area"]
visible = false
position = Vector2(83, -212)
scale = Vector2(0.55, 0.55)
texture = ExtResource("12_wehhw")

[node name="hausaufgabenheft" type="Node2D" parent="Logik"]
process_mode = 3
y_sort_enabled = true

[node name="Area2D" type="Area2D" parent="Logik/hausaufgabenheft"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 4
script = ExtResource("10_jokoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Logik/hausaufgabenheft/Area2D"]
y_sort_enabled = true
position = Vector2(-55, -203)
shape = SubResource("CircleShape2D_fsc35")

[node name="HausiHeftOffen" type="Sprite2D" parent="Logik/hausaufgabenheft/Area2D"]
visible = false
position = Vector2(56, -255)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_fsc35")

[node name="Label" type="Label" parent="Logik/hausaufgabenheft/Area2D/HausiHeftOffen"]
offset_left = -395.0
offset_top = 293.333
offset_right = 192.0
offset_bottom = 355.333
text = "'E' drücken, um zu schließen"
label_settings = SubResource("LabelSettings_fsc35")

[node name="EKey" type="Sprite2D" parent="Logik/hausaufgabenheft/Area2D"]
position = Vector2(-62, -369)
scale = Vector2(0.385, 0.385)
texture = ExtResource("7_5arhk")

[node name="schrank" type="Node2D" parent="Logik"]

[node name="schrank_area" type="Area2D" parent="Logik/schrank"]
position = Vector2(-251, -239)
collision_layer = 4
collision_mask = 4
script = ExtResource("15_wehhw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Logik/schrank/schrank_area"]
shape = SubResource("CircleShape2D_xhwow")

[node name="EKey" type="Sprite2D" parent="Logik/schrank/schrank_area"]
position = Vector2(-4, -145)
scale = Vector2(0.38, 0.38)
texture = ExtResource("7_5arhk")

[node name="schloss_input" type="Node2D" parent="Logik/schrank/schrank_area"]
visible = false

[node name="Schloss" type="Sprite2D" parent="Logik/schrank/schrank_area/schloss_input"]
position = Vector2(286, -39)
scale = Vector2(0.355, 0.355)
texture = ExtResource("16_xhwow")

[node name="LineEdit" type="LineEdit" parent="Logik/schrank/schrank_area/schloss_input"]
offset_left = 136.0
offset_top = -56.0
offset_right = 373.0
offset_bottom = -25.0
placeholder_text = "(Dreistellig)"

[node name="schliessen" type="Button" parent="Logik/schrank/schrank_area/schloss_input"]
offset_left = -5.0
offset_top = 189.0
offset_right = 510.0
offset_bottom = 220.0
text = "Schließen"

[node name="Label_input" type="Label" parent="Logik/schrank/schrank_area/schloss_input"]
offset_left = 137.0
offset_top = -84.0
offset_right = 343.0
offset_bottom = -61.0
text = "Was könnte der code sein?"
label_settings = SubResource("LabelSettings_wehhw")

[node name="ExNotiz1" type="Sprite2D" parent="Logik/schrank/schrank_area"]
visible = false
position = Vector2(344, 26)
scale = Vector2(0.403636, 0.403636)
texture = ExtResource("17_8mifd")

[node name="Label_falsch" type="Label" parent="Logik/schrank/schrank_area"]
visible = false
offset_left = 118.0
offset_top = 115.0
offset_right = 385.0
offset_bottom = 138.0
text = "Hmm, das hat nicht funktioniert..."
label_settings = SubResource("LabelSettings_xhwow")

[connection signal="body_entered" from="Logik/schulbuch/prompt_area" to="Logik/schulbuch/prompt_area" method="_on_body_entered"]
[connection signal="body_exited" from="Logik/schulbuch/prompt_area" to="Logik/schulbuch/prompt_area" method="_on_body_exited"]
[connection signal="pressed" from="Logik/schulbuch/prompt_area/seiten_input/schliessen" to="Logik/schulbuch/prompt_area" method="_on_schliessen_pressed"]
[connection signal="body_entered" from="Logik/hausaufgabenheft/Area2D" to="Logik/hausaufgabenheft/Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Logik/hausaufgabenheft/Area2D" to="Logik/hausaufgabenheft/Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="Logik/schrank/schrank_area" to="Logik/schrank/schrank_area" method="_on_body_entered"]
[connection signal="body_exited" from="Logik/schrank/schrank_area" to="Logik/schrank/schrank_area" method="_on_body_exited"]
[connection signal="pressed" from="Logik/schrank/schrank_area/schloss_input/schliessen" to="Logik/schrank/schrank_area" method="_on_schliessen_pressed"]
